--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,26 +1,40 @@
+@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@700&display=swap");
 * {
-    margin: 0;
     padding: 0;
+    margin: 0;
+    border: 0;
+}
+
+*, *:before, *:after {
     box-sizing: border-box;
-    outline: none;
-    color: #000;
 }
 
 body{
-    background: url(/img/bg5.gif) 70%;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
+    height: 100%;
+    width: 100%;
+    line-height: 1;
+    font-size: 14px;
+    overflow: hidden;
     font-family: "Titillium Web", sans-serif;
+}
+
+input, button, textarea {
+    font-family: inherit;
+}
+
+input::-ms-clear {
+    display: none;
 }
 
 button {
     cursor: pointer;
 }
+
 button::-moz-focus-inner {
     padding: 0;
     border: 0;
 }
+
 a, a:visited, a:hover  {
     text-decoration: none;
 }
@@ -28,224 +42,195 @@ a, a:visited, a:hover  {
 ul {
     list-style: none;
 }
-.nav {
-    margin: 1rem;
+
+img {
+    vertical-align: top;
+    max-width: 100%;
 }
+
+body{
+    background: url(/img/giphy1.gif) left top no-repeat, 
+    url(/img/giphy2.gif) right bottom no-repeat, 
+    url(/img/giphy4.gif) left top no-repeat;
+    height: 100vh;
+    font-family: "Titillium Web", sans-serif;
+}
+
+header{
+    width: 100vw;
+    height: 80px;
+    background: #94dbf745;
+}
+
+.nav {
+    max-width: 90vw;
+    margin: auto;
+    padding: 25px 0 0;
+}
+
 .nav__menu {
     display: flex;
-    align-items: center;
     justify-content: flex-end;
-    list-style-type: none;
-}
-.menu__item,
-.menu__item-popup {
-    padding-right: 1rem;
 }
 
-.menu__item:nth-child(1),
-.menu__item:nth-child(2) {
-    padding-right: .5rem;
-}
-#menu__input {
-    position: absolute;
-}
-.menu__item-input:checked ~ .menu__submenu,
-.menu__item-input:checked ~ .submenu__item-label {
-    display: flex;
-}
-.menu__item-input:checked + .menu__item-label::before {
-    opacity: 1;
-}
-.menu__item-label {
+.menu__item {
+    flex: 0 0 30px;
+    margin: 0 30px 0 0;
     width: 30px;
     height: 30px;
-    display: block;
-    cursor: pointer;
-    background-image: url("../img/menu/apps.png");
-    background-size: cover;
 }
 
-.menu__item-label::before {
-    opacity: 0;
-    content: "";
-    z-index: 2;
-    position: absolute;
-    top: 60px;
-    right: 130px;
-    width: 10px;
-    height: 10px;
-    border-top: 1px solid #ccc;
-    border-right: 1px solid #ccc;
-    transform: rotate(-45deg);
-}
-.menu__link-text,
-.menu__item-label,
-.menu__link-bell,
-.menu__link-user {
-    text-decoration: none;
-    border: 1px solid transparent;
-}  
-.menu__link-text:focus,
-.menu__item-label:focus,
-.menu__link-bell:focus,
-.menu__link-user:focus {
-    border: 3px solid rgb(235, 231, 10);
-}   
-.menu__link-text {
-    padding: .5rem;
-}
-
-.menu__link-text:hover {
-    text-decoration: underline;
-    opacity: .75;
-}
-
-.menu__link-bell {
-    background-image: url("../img/menu/bell.png");
-    background-size: cover;
-    display: block;
-    width: 50px;
-    height: 50px;
-}
-.menu__link-bell:hover {
-    opacity: .75;
-}
-.menu__link-user {
-    background-image: url("../img/menu/45641044.jpg");
-    background-size: cover;
-    display: block;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-}
-.menu__link-user:hover {
-    box-shadow: 0 1px 0 rgba(0,0,0,.15);
-}
-.menu__submenu {
-    z-index: 1;
-    width: 320px;
-    max-height: 500px;
-    background-color: aliceblue;
-    position: absolute;
-    display: none;
-    top: 65px;
-    right: 70px;
-    border: 1px solid rgb(31, 22, 22);
-    flex-wrap: wrap;
-    justify-content: space-between;
-    overflow-x: hidden;
-    padding: .5rem .5rem 1.6rem .5rem;
-    box-shadow: 3px 3px 10px rgba(0, 0, 0, .3);
-    list-style-type: none;
-}
-.submenu__item {
-    height: 100px;
-    width: 100px;
-    display: flex;
-    align-items: flex-end;
-    margin-bottom: 1rem;
-}
-.submenu__link {
+.menu__item img {
+    object-fit: contain;
     width: 100%;
     height: 100%;
-    display: block;
-    text-align: center;
-    border: 1px solid transparent;
-    text-decoration: none;
-}
-.submenu__link img {
-    width: 50%;
-}
-.submenu__link:hover {
-    border: 1px solid #ccc;
-}
-.submenu__link:focus {
-    border: 1px solid rgb(241, 226, 14); 
-}
-.menu__submenu [type="checkbox"] {
-    display: none;
 }
 
-.menu__submenu::-webkit-scrollbar {
-    width: .15rem;
+.menu {
+    position: relative;
 }
 
-.menu__submenu::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
+.menu__input {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    opacity: 0;
 }
 
-.menu__submenu::-webkit-scrollbar-thumb {
-    background-color: rgb(182, 180, 180);
-    border: 1px solid rgb(58, 64, 70);
-}
-.menu__submenu [type="checkbox"] {
-    display: none;
+.menu__label {
+    position: relative;
+    cursor: pointer;
 }
 
-.menu__submenu::-webkit-scrollbar {
-    width: .15rem;
-}
-
-.menu__submenu::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
-}
-
-.menu__submenu::-webkit-scrollbar-thumb {
-    background-color: rgb(182, 180, 180);
-    border: 1px solid rgb(58, 64, 70);
-}
-.submenu__insidemenu {
-    display: none;
+.mainpopup {
+    margin: 25px 100px 0 -200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 345px;
+    height: 460px;
+    overflow-y: scroll;
     flex-wrap: wrap;
-    overflow: auto;
-    margin-top: 3rem;
-    z-index: 1;
+    background: #fbfbfb;
+    border: 5px solid black;
+    border-radius: 4px;
+
+.mainpopup::before {
+    content: "";
+    position: absolute;
+    top: 40px;
+    left: 50%;
+    transform: translate(-45%, 0);
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 15px 20px 15px;
+    border-color: transparent transparent #000000 transparent;
+    display: none;
 }
-.submenu__item-input:checked ~ .submenu__insidemenu {
+
+.mainpopup::-webkit-scrollbar {
+    width: 5px;
+}
+
+.mainpopup::-webkit-scrollbar-track {
+    background: #94dbf7;
+}
+
+.mainpopup::-webkit-scrollbar-thumb {
+    background: #ffa4ec;
+}
+
+.mainpopup::-webkit-scrollbar-thumb:hover {
+    background: black;
+}
+
+.mainpopup__link {
+    width: 50px;
+    margin: 8px;
+    padding: 15px;
+    height: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-sizing: content-box;
+    border-radius: 4px;
+}
+
+.mainpopup__link:hover {
+    border: 5px solid black;
+    padding: 10px;
+}
+
+.mainpopup__link img {
+    object-fit: contain;
+    width: 70%;
+    height: 70%;
+}
+
+.mainpopup__link p {
+    margin: 10px 0 0;
+    color: black;
+}
+
+.mainpopup__item-input {
+    position: absolute;
+    width: 20px;
+    height: 10px;
+    cursor: pointer;
+    opacity: 0;
+    top: 70%;
+}
+
+.mainpopup__item-label {
+    position: relative;
+    cursor: pointer;
+    flex: 0 0 90%;
+    text-align: center;
+    border: 5px solid black;
+    border-radius: 4px;
+    padding: 3px 0;
+    margin: 40px 0;
+}
+
+.mainpopup__item-label:hover {
+    background-color: #ffa4ec;
+}
+
+.mainpopup__item-label:before {
+    content: "More";
+}
+
+.mainpopup--invisible {
+    visibility: hidden;
+}
+
+.mainpopup__link--hidden {
+    display: none;
+}
+
+input.menu__input:checked ~ div.mainpopup--invisible {
+    visibility: visible;
+}
+
+input:checked ~ .mainpopup__link--hidden {
     display: flex;
 }
 
-.submenu__item-input:checked ~ .submenu__item-label {
-    display: none;
+input:focus ~ label {
+    outline-offset: 1px;
+    outline: -webkit-focus-ring-color auto 1px;
+    outline-color: -webkit-focus-ring-color;
+    outline-style: auto;
+    outline-width: 1px;
+}
+
+.mainpopup__item-input:checked ~ .mainpopup__item-label::before {
+    content: "Less"; 
 } 
 
-.submenu__item-input:checked .menu__submenu {
-    overflow: auto;
-}
-.submenu__insidemenu::before{
-    z-index: 1;
-    content: '';
-    width: 100%;
-    position: absolute;
-    top: 490px;
-    left: 0;
-    border-bottom: 1px solid #ccc;
-}
-
-.insidemenu__item {
-    height: 100px;
-    width: 100px;
-    display: flex;
-    align-items: flex-end;
-    margin-bottom: 1rem;
-}
-.insidemenu__link {
-    width: 100%;
-    height: 100%;
+.menu__item-input:checked ~ .menu__item-label::before {
     display: block;
-    text-align: center;
-    border: 1px solid transparent;
-    text-decoration: none;
-}
-
-.insidemenu__link:hover {
-    border: 1px solid rgb(247, 230, 5);
-}
-  
-.extramenu__link:focus {
-    border: 1px solid #00f;
-}
-
-.insidemenu__link img {
-    width: 50%;
 }
