--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@700&display=swap");
 * {
     padding: 0;
     margin: 0;
@@ -47,20 +46,17 @@ img {
     vertical-align: top;
     max-width: 100%;
 }
-
-body{
-    background: url(/img/giphy1.gif) left top no-repeat, 
-    url(/img/giphy2.gif) right bottom no-repeat, 
-    url(/img/giphy4.gif) left top no-repeat;
-    height: 100vh;
-    font-family: "Titillium Web", sans-serif;
+main {
+    background: 
+    url(/img/bg5.gif) center no-repeat;
+    background-size: 600px;
 }
 
-header{
+
+header {
     width: 100vw;
     height: 80px;
-    background: #94dbf745;
-}
+} 
 
 .nav {
     max-width: 90vw;
@@ -74,16 +70,18 @@ header{
 }
 
 .menu__item {
-    flex: 0 0 30px;
     margin: 0 30px 0 0;
-    width: 30px;
-    height: 30px;
+    width: 42px;
+    height: 40px;
 }
 
 .menu__item img {
     object-fit: contain;
     width: 100%;
     height: 100%;
+}
+.menu__link-user img {
+    border-radius: 50%;
 }
 
 .menu {
@@ -135,11 +133,11 @@ header{
 }
 
 .mainpopup::-webkit-scrollbar-track {
-    background: #94dbf7;
+    background: #787a7ad8;
 }
 
 .mainpopup::-webkit-scrollbar-thumb {
-    background: #ffa4ec;
+    background: #ec8179;
 }
 
 .mainpopup::-webkit-scrollbar-thumb:hover {
@@ -160,8 +158,11 @@ header{
 }
 
 .mainpopup__link:hover {
-    border: 5px solid black;
+    border: 2px solid black;
     padding: 10px;
+}
+.mainpopup__link:focus {
+    background-color: #a19999b9;
 }
 
 .mainpopup__link img {
@@ -196,7 +197,7 @@ header{
 }
 
 .mainpopup__item-label:hover {
-    background-color: #ffa4ec;
+    background-color: #eb665d;
 }
 
 .mainpopup__item-label:before {
@@ -233,4 +234,42 @@ input:focus ~ label {
 
 .menu__item-input:checked ~ .menu__item-label::before {
     display: block;
+}
+.container {
+    width: 100%;
+    min-height: 100vh;
+    display: block;
+}
+
+.container img {
+    margin: 30px;
+} 
+.search__panel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px;
+}
+.container__input {
+    min-width: 29rem;
+    min-height: 3.7rem;
+    border-radius: 2rem;
+    background-color: #050505;
+    font-size: 1.5rem;
+    color: #f7f5f5;
+    -webkit-transition: all 300ms;
+    transition: all 300ms;
+    text-align: center;
+}
+.container__btn {
+    display: block;
+    min-width: 4rem;
+    min-height: 4rem;
+    background-image: url(/img/menu/kat.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 50%;
+    margin-left: 8px;
+    cursor: pointer;
+    padding: 0;
 }
