--- a/CSS/style.css
+++ b/CSS/style.css
@@ -49,7 +49,7 @@ img {
 main {
     background: 
     url(../img/bg5.gif) center no-repeat;
-    background-size: 600px;
+    background-size: 500px;
 }
 
 
@@ -252,9 +252,9 @@ input:focus ~ label {
 }
 .container__input {
     min-width: 29rem;
-    min-height: 3.7rem;
+    min-height: 3.1rem;
     border-radius: 2rem;
-    background-color: #050505;
+    background-color: #171616cf;
     font-size: 1.5rem;
     color: #f7f5f5;
     -webkit-transition: all 300ms;
