--- a/CSS/style.css
+++ b/CSS/style.css
@@ -257,7 +257,7 @@ input:focus ~ label {
     background-color: #f7f6f6cf;
     border: 5px solid black;
     font-size: 1.5rem;
-    color: #efeaea;
+    color: #080707;
     -webkit-transition: all 300ms;
     transition: all 300ms;
     text-align: center;
